# artemis_crib

./: '  .artemislogon.C.in  .clang-format  .gitignore  .gitmodules  .thisartemis-crib.sh.in  404.html  CMakeLists.txt  Doxyfile  README.md  doxy_main.md  hugo.toml  index.html  index.print.html  index.search.js  index.xml  mapper.conf  pyproject.toml  requirements.txt  run_artemis.cpp  search.html  setbldprm.sh  setmuxprm.sh  sitemap.xml  thisartemis-crib.sh  userlogon.C
.github/workflows/: gh-pages.yml
about/: index.html
archetypes/: default.md
basic/: index.html  index.print.html  index.xml
categories/: index.html  index.xml
conf/seg/: modulelist.yaml  seglist.yaml
content/: _index.md  index.md
content/Basic/: _index.md
content/CRIB_parts/: _index.md
content/about/: index.md
content/crib_parts/: _index.md  environment.md  minor_change.md  newcommand.md  onlinemode.md  userconfig.md
content/example/: Nbodyreaction.md  _index.md  beam_generator.md  geometry.md  segid.md
content/installation/: _index.md  art_analysis.md  artemis.md  cmake.md  directory.md  energyloss_calculator.md  init.sh  mount.md  requirements.md  root.md  yaml-cpp.md
content/processors/: _index.md
content/q_and_a/: _index.md
content/setting/: _index.md  artemis_commands.md  build.md  histograms.md  map_config.md  new_directory.md  new_experiment.md  new_user.md  steering.md  vncserver.md
content/test/: hello-world.md
crib_parts/: index.html  index.print.html  index.xml
crib_parts/environment/: index.html  index.print.html  index.xml
crib_parts/minor_change/: index.html  index.print.html  index.xml
crib_parts/newcommand/: index.html  index.print.html  index.xml
crib_parts/onlinemode/: index.html  index.print.html  index.xml
crib_parts/userconfig/: index.html  index.print.html  index.xml
css/: format-print.css  print.css  swagger.css  theme-CRIB-theme.css  theme-artemis_crib.css  theme-auto.css  variant.css
docs/html/: AlphaCalibration_8C.html  AlphaCalibration_8C.js  AlphaCalibration_8C_source.html  CHANGELOG_8md.html  INCLUDE__ME_8md.html  MUXParamMaker_8C.html  MUXParamMaker_8C.js  MUXParamMaker_8C_source.html  Nbodyreaction_8md.html  PPACLineCalibration_8C.html  PPACLineCalibration_8C.js  PPACLineCalibration_8C_source.html  README_8md.html  TBranchCopyProcessor_8cc.html  TBranchCopyProcessor_8cc.js  TBranchCopyProcessor_8cc_source.html  TBranchCopyProcessor_8h.html  TBranchCopyProcessor_8h_source.html  TCRIBPIDProcessor_8cc.html  TCRIBPIDProcessor_8cc.js  TCRIBPIDProcessor_8cc_source.html  (+996 more)
example/: index.html  index.print.html  index.xml
hist/: set_tcutg.py
i18n/: en.toml
installation/: index.html  index.print.html  index.xml  init.sh
macro/: .MakeSimpleRoot.C  .MakeSimpleRoot2.C  .MakeSingleRoot.old.C  AlphaCalibration.C  MUXParamMaker.C  MUXParamMaker_1miss_strip.C  PID.C  PPACLineCalibration.C  UserUtil.C  chkmuxpos.C  dE_E_plot.C  f1.C  f2.C  f3.C  proton_number.C  run_AlphaCalibration.C  run_MUXParamMaker.C  run_PPACLineCalibration.C  scaler.C  setalias.C  shift.C  xfitg.C  xstatus.C
processors/: index.html  index.print.html  index.xml
pyscripts/: CRIB_PID.py  default_namer.py  effective_thickness.py  map_checker.py  set_tcutg.py  th2_slice_fit.py
q_and_a/: index.html  index.print.html  index.xml
scripts/: evtloop.C  processline.C  proton.C  reconst.C
setting/: index.html  index.print.html  index.xml
src/: CMakeLists.txt  linkdef_user.h
src-crib/: CMakeLists.txt  TBranchCopyProcessor.cc  TBranchCopyProcessor.h  TEvtNumProcessor.cc  TEvtNumProcessor.h  TF1PPACProcessor.cc  TF1PPACProcessor.h  TModuleData.cc  TModuleData.h  TScalerMonitorProcessor.cc  TScalerMonitorProcessor.h  TSegmentOutputProcessor.cc  TSegmentOutputProcessor.h  TTSMappingProcessor.cc  TTimingChargeAllMappingProcessor.cc  TTimingChargeAllMappingProcessor.h  TTimingDataMappingProcessor.cc  TTimingDataMappingProcessor.h  TTreePeriodicEventStore.cc  TTreePeriodicEventStore.h  artcrib_linkdef.h
src-crib/commands/: TCatCmdLoopStart.cc  TCatCmdLoopStart.h  TCatCmdLoopStop.cc  TCatCmdLoopStop.h  TCatCmdTCutG.cc  TCatCmdTCutG.h  TCmdDraw.cc  TCmdDraw.h  TCmdErase.cc  TCmdErase.h  TCmdXYblow.cc  TCmdXYblow.h  TCmdXblow.cc  TCmdXblow.h  TCmdXfitg.cc  TCmdXfitg.h  TCmdXstatus.cc  TCmdXstatus.h
src-crib/geo/: TDetectorParameter.cc  TDetectorParameter.h  TTargetParameter.cc  TTargetParameter.h  TUserGeoInitializer.cc  TUserGeoInitializer.h
src-crib/mux/: TMUXCalibrationProcessor.cc  TMUXCalibrationProcessor.h  TMUXData.cc  TMUXData.h  TMUXDataMappingProcessor.cc  TMUXDataMappingProcessor.h  TMUXPositionConverter.cc  TMUXPositionConverter.h  TMUXPositionValidator.cc  TMUXPositionValidator.h
src-crib/reconst/: TReactionInfo.cc  TReactionInfo.h  TReconstProcessor.cc  TReconstProcessor.h  TTGTIKProcessor.cc  TTGTIKProcessor.h
src-crib/simulation/: TCRIBPIDProcessor.cc  TCRIBPIDProcessor.h  TDetectParticleProcessor.cc  TDetectParticleProcessor.h  TNBodyReactionProcessor.cc  TNBodyReactionProcessor.h  TParticleInfo.cc  TParticleInfo.h  TRandomBeamGenerator.cc  TRandomBeamGenerator.h  TReactionInfo.cc  TSolidAngleProcessor.cc  TSolidAngleProcessor.h  TTreeBeamGenerator.cc  TTreeBeamGenerator.h  TTreePeriodicEventStore.cc  TTreePeriodicEventStore.h
src-crib/telescope/: TTelescopeData.cc  TTelescopeData.h  TTelescopeParameter.cc  TTelescopeParameter.h  TTelescopeProcessor.cc  TTelescopeProcessor.h
src-crib/timestamp/: TModuleDecoderTimestamp.cc  TModuleDecoderTimestamp.h  TTSData.cc  TTSData.h  TTSMappingProcessor.cc  TTSMappingProcessor.h
steering/: calibration.yaml  chkbeamcoin_after.yaml  chkbeamcoin_before.yaml  chkbeamsingle_after.yaml  chkbeamsingle_before.yaml  chkf1.yaml  chkf2.yaml  chkf3.yaml  chkgeo.yaml  chkmwdc.yaml  chkpid.yaml  chkppac.yaml  chksca.yaml  chkseg.yaml  chkts.yaml  procTGTIK.yaml  procproton.yaml  rdbeamcoin.yaml  rdbeamsingle.yaml  rdproton.yaml  shift.yaml  simEffThickness.yaml  simNBodyReaction.yaml  simReconst.yaml  simSolidAngle.yaml  simTGTIK.yaml  simTGTIK_syserror.yaml  simTwoBodyReaction.yaml  tref.yaml
tags/: index.html  index.xml
(+1463 files in other folders)
