[tool.poetry]
name = "artemis-crib"
version = "2024.8.0"
description = "artemis work directory for crib experiment"
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
"ruamel.yaml" = "^0.18.6"
argparse = "^1.4.0"
numpy = "^2.0.1"
matplotlib = "^3.9.2"
jupyter = "^1.0.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
